try to classify thingsgit add .

--- a/days/w2d1d2/bert.ipynb
+++ b/days/w2d1d2/bert.ipynb
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: 0.0003812 STD: 0.107 VALS [-0.1223 -0.03081 -0.1059 -0.09209 -0.1638 0.01967 0.06139 -0.126 -0.05254 -0.1963...]\n"
+      " SHAPE (2, 12, 3, 3) MEAN: -0.0001333 STD: 0.1026 VALS [-0.06303 -0.05638 -0.1401 -0.1512 -0.04511 0.05861 0.03294 0.1125 -0.04501 -0.1422...]\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 0.001864 STD: 0.1167 VALS [0.07304 -0.01085 0.04176 -0.1705 -0.2073 -0.01323 -0.1592 0.1521 0.06419 -0.01103...]\n"
+      " SHAPE (2, 3, 768) MEAN: -0.003042 STD: 0.1226 VALS [0.09244 0.2714 0.1809 -0.02865 -0.06071 0.03604 -0.08844 -0.02545 0.1946 0.1109...]\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,22 +153,23 @@
      "output_type": "stream",
      "text": [
       "layer norm MATCH!!!!!!!!\n",
-      " SHAPE (20, 10) MEAN: -1.192e-09 STD: 1.003 VALS [-0.6454 0.2812 1.201 0.4184 1.571 0.1538 -1.265 -0.03877 -1.931 0.2547...]\n"
+      " SHAPE (20, 10) MEAN: -1.431e-08 STD: 1.003 VALS [0.6906 -0.84 1.881 1.711 -0.5116 -0.9577 -0.1387 -0.6943 -0.6741 -0.4662...]\n"
      ]
     }
    ],
    "source": [
     "class LayerNorm(nn.Module):\n",
-    "    def __init__(self, normalized_dim):\n",
+    "    def __init__(self, normalized_dim, eps=1e-05):\n",
     "        super().__init__()\n",
     "        self.weight = torch.nn.Parameter(torch.ones(normalized_dim))\n",
     "        self.bias = torch.nn.Parameter(torch.zeros(normalized_dim))\n",
+    "        self.eps = eps\n",
     "\n",
     "    def forward(self, X):\n",
-    "        std = torch.std(X.detach(), -1, unbiased=False)\n",
+    "        var = torch.var(X.detach(), -1, unbiased=False)\n",
     "        mean = torch.mean(X.detach(), -1)\n",
     "\n",
-    "        return ((X.detach() - mean.unsqueeze(-1)) / std.unsqueeze(-1)) * self.weight + self.bias\n",
+    "        return (X.detach() - mean.unsqueeze(-1)) / torch.sqrt(var.unsqueeze(-1) + self.eps) * self.weight + self.bias\n",
     "\n",
     "bert_tests.test_layer_norm(LayerNorm)"
    ]
@@ -183,7 +184,7 @@
      "output_type": "stream",
      "text": [
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -4.139e-09 STD: 1 VALS [0.007131 -0.04372 0.6502 -0.5972 -1.097 0.7267 0.1275 -0.6035 -0.2226 0.2145...]\n"
+      " SHAPE (2, 3, 768) MEAN: -5.381e-09 STD: 1 VALS [0.007132 -0.04372 0.6502 -0.5972 -1.097 0.7267 0.1275 -0.6035 -0.2226 0.2145...]\n"
      ]
     }
    ],
@@ -365,8 +366,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "130611270 130611270\n",
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.4321 0.1186 -0.7165 -0.5262 0.4967 1.223 0.3165 -0.3247 -0.5717...]\n"
+      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
      ]
     }
    ],
@@ -385,15 +387,15 @@
     "\n",
     "class Bert(nn.Module):\n",
     "    def __init__(self, vocab_size, hidden_size, max_position_embeddings, type_vocab_size,\n",
-    "        dropout, intermediate_size, num_heads, num_layers\n",
+    "        dropout, intermediate_size, num_heads, num_layers, num_classes=2\n",
     "    ):\n",
     "        super().__init__()\n",
     "        self.embedding = BertEmbedding(vocab_size, hidden_size, max_position_embeddings, type_vocab_size, dropout)\n",
     "        self.transformer = nn.ModuleList([BertBlock(hidden_size, intermediate_size, num_heads, dropout) for _ in range(num_layers)])\n",
     "        self.lm_head = BertUnembed(hidden_size, vocab_size)\n",
+    "        self.classification_head = torch.nn.Linear(hidden_size, num_classes)\n",
     "\n",
-    "\n",
-    "    def forward(self, input_ids):\n",
+    "    def forward(self, input_ids, classification_mode=False):\n",
     "        token_type_ids = torch.zeros_like(input_ids, device=input_ids.device)\n",
     "\n",
     "        embeddings = self.embedding(input_ids, token_type_ids)\n",
@@ -401,8 +403,20 @@
     "        post_bert_blocks = embeddings\n",
     "        for block in self.transformer:\n",
     "            post_bert_blocks = block(post_bert_blocks)\n",
-    "        \n",
-    "        return self.lm_head(post_bert_blocks)\n",
+    "\n",
+    "        if classification_mode:\n",
+    "            return self.classification_head(post_bert_blocks)\n",
+    "        else:\n",
+    "            return self.lm_head(post_bert_blocks)\n",
+    "\n",
+    "bertbertbert = Bert(\n",
+    "            vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
+    "            type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
+    "            num_heads=12, num_layers=12\n",
+    "        )\n",
+    "pytorch_total_params = sum(p.numel() for p in bertbertbert.parameters())\n",
+    "pytorch_total_trainable_params = sum(p.numel() for p in bertbertbert.parameters() if p.requires_grad)\n",
+    "print(pytorch_total_params, pytorch_total_trainable_params)\n",
     "\n",
     "bert_tests.test_bert(Bert)"
    ]
@@ -416,7 +430,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -429,20 +443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "error in comparing Berts\n SHAPE (10, 20, 28996) MEAN: -2.857 STD: 2.527 VALS [-6.559 -7.043 -6.805 -6.711 -6.857 -6.993 -7.134 -6.899 -6.753 -6.806...] \n!=\n SHAPE (10, 20, 28996) MEAN: -2.856 STD: 2.526 VALS [-6.556 -7.04 -6.803 -6.709 -6.854 -6.99 -7.131 -6.896 -6.75 -6.804...]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-59cf074e9ade>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mmy_bert\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpretrained_state_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mbert_tests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_same_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpretrained_bert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/mlab/days/w2d1/bert_tests.py\u001b[0m in \u001b[0;36mtest_same_output\u001b[0;34m(your_bert, pretrained_bert)\u001b[0m\n\u001b[1;32m    167\u001b[0m     \u001b[0mvocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myour_bert\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoken_embedding\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m     \u001b[0minput_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m     allclose(your_bert.eval()(input_ids),\n\u001b[0m\u001b[1;32m    170\u001b[0m              \u001b[0mpretrained_bert\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m              'comparing Berts', tol=1e-4)\n",
-      "\u001b[0;32m~/mlab/days/w2d1/bert_tests.py\u001b[0m in \u001b[0;36mallclose\u001b[0;34m(my_out, their_out, name, tol)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheir_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0merrstring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'error in {name}\\n{tpeek(\"\", my_out, ret=True)} \\n!=\\n{tpeek(\"\", their_out, ret=True)}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mtpeek\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{name} MATCH!!!!!!!!\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmy_out\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: error in comparing Berts\n SHAPE (10, 20, 28996) MEAN: -2.857 STD: 2.527 VALS [-6.559 -7.043 -6.805 -6.711 -6.857 -6.993 -7.134 -6.899 -6.753 -6.806...] \n!=\n SHAPE (10, 20, 28996) MEAN: -2.856 STD: 2.526 VALS [-6.556 -7.04 -6.803 -6.709 -6.854 -6.99 -7.131 -6.896 -6.75 -6.804...]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comparing Berts MATCH!!!!!!!!\n",
+      " SHAPE (10, 20, 28996) MEAN: -2.784 STD: 2.353 VALS [-5.262 -5.396 -5.487 -5.3 -5.189 -5.368 -5.427 -5.389 -5.313 -5.3...]\n"
      ]
     }
    ],
@@ -458,10 +467,12 @@
     "#my_keys = my_bert.state_dict().keys()\n",
     "#print(set(my_keys) - set(pretrained_keys))\n",
     "\n",
+    "# we could load these but actually we want to be fine-tuning this stuff in w2d2\n",
+    "# so let's not take these \n",
     "del pretrained_state_dict[\"classification_head.weight\"]\n",
     "del pretrained_state_dict[\"classification_head.bias\"]\n",
     "\n",
-    "my_bert.load_state_dict(pretrained_state_dict)\n",
+    "my_bert.load_state_dict(pretrained_state_dict, strict=False)\n",
     "bert_tests.test_same_output(my_bert, pretrained_bert)"
    ]
   },
