--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -412,6 +412,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class BertClassificationHead(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        hidden_size: int,\n",
+    "        num_classes: int,\n",
+    "        dropout: float,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.dropout = nn.Dropout()\n",
+    "        self.linear = nn.Linear(in_features=hidden_size, out_features=num_classes)\n",
+    "\n",
+    "    def forward(self, xs: t.Tensor) -> t.Tensor:\n",
+    "        return self.linear(self.dropout(xs[:, 0]))\n",
+    "\n",
+    "\n",
     "class Bert(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -425,6 +441,9 @@
     "        num_layers: int,\n",
     "    ):\n",
     "        super().__init__()\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.dropout = dropout\n",
     "\n",
     "        self.embedding = BertEmbedding(\n",
     "            vocab_size=vocab_size,\n",
@@ -463,10 +482,26 @@
     "            )\n",
     "        )\n",
     "\n",
-    "    def forward(self, input_ids: t.Tensor) -> t.Tensor:\n",
+    "    def transformer_output(self, input_ids: t.Tensor) -> t.Tensor:\n",
     "        token_type_ids = t.zeros_like(input_ids)\n",
     "        embed = self.embedding(input_ids, token_type_ids)\n",
-    "        return self.lm_head(self.transformer(embed))\n",
+    "        return self.transformer(embed)\n",
+    "\n",
+    "\n",
+    "    def forward(self, input_ids: t.Tensor) -> t.Tensor:\n",
+    "        return self.lm_head(self.transformer_output(input_ids))\n",
+    "\n",
+    "\n",
+    "class BertClassifier(nn.Module):\n",
+    "    def __init__(self, num_classes: int, bert: Bert):\n",
+    "        super().__init__()\n",
+    "        self.bert = bert\n",
+    "        self.classification_head = BertClassificationHead(\n",
+    "            hidden_size=bert.hidden_size, num_classes=num_classes, dropout=bert.dropout\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.classification_head(self.bert.transformer_output(x))\n",
     "\n",
     "\n",
     "# bert_tests.test_bert(Bert)\n"
@@ -481,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +554,8 @@
     "\n",
     "    return input.grad\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "# https://stackoverflow.com/a/43615015\n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    N = 5\n",
     "    torchs = nn.LayerNorm(N, eps=1e-5)\n",
     "    ours = LayerNorm(N)\n",
@@ -539,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +592,7 @@
      "output_type": "stream",
      "text": [
       "comparing Berts MATCH!!!!!!!!\n",
-      " SHAPE (10, 20, 28996) MEAN: -2.834 STD: 2.475 VALS [-5.684 -6.157 -6.036 -6.633 -6.322 -6.318 -6.175 -6.384 -6.503 -6.367...]\n"
+      " SHAPE (10, 20, 28996) MEAN: -2.694 STD: 2.467 VALS [-5.191 -5.284 -5.276 -5.436 -5.785 -5.458 -5.483 -5.676 -5.722 -5.645...]\n"
      ]
     }
    ],
@@ -609,8 +645,9 @@
     "\n",
     "    return {transform_key(k): v for k, v in hf_dict.items() if include_key(k)}\n",
     "\n",
+    "# https://stackoverflow.com/a/43615015\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "def load_pretrained_bert():\n",
     "    my_bert = Bert(\n",
     "        vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
     "        type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
@@ -618,6 +655,10 @@
     "    )\n",
     "    pretrained_bert = bert_tests.get_pretrained_bert()\n",
     "    my_bert.load_state_dict(hf_to_our_state_dict(pretrained_bert.state_dict()))\n",
+    "    return my_bert, pretrained_bert\n",
+    "\n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "    my_bert, pretrained_bert = load_pretrained_bert()\n",
     "    bert_tests.test_same_output(my_bert, pretrained_bert, tol=1e-4)\n"
    ]
   },
