dm+mia w2d2 finished part one

--- a/days/w2d2/w2d2.ipynb
+++ b/days/w2d2/w2d2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.5602872371673584, 0.12122748047113419, 0.07108743488788605, 0.069109246134758, 0.05439625307917595]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -169,7 +162,7 @@
        " ('green', 0.05439625307917595)]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,6 +183,71 @@
     "    return zip(topkguesses, topkprobs.tolist()[0])\n",
     "\n",
     "list(get_mask(tokens))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The British Prime Minister is ___.\n",
+      "                          17% elected\n",
+      "                          12% British\n",
+      "                          10% Hon\n",
+      "                           9% appointed\n",
+      "                           4% Conservative\n",
+      "The capital of Illinois is ___.\n",
+      "                       43% Chicago\n",
+      "                       20% Springfield\n",
+      "                        2% Cairo\n",
+      "                        1% Madison\n",
+      "                        1% Quincy\n",
+      "17 plus 80 equals ___.\n",
+      "               4% 10\n",
+      "               4% 16\n",
+      "               4% 20\n",
+      "               3% 15\n",
+      "               3% 12\n",
+      "1, 1, 2, 3, 5, 6, ___.\n",
+      "              43% 7\n",
+      "              15% 8\n",
+      "               5% 10\n",
+      "               4% 12\n",
+      "               4% 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ascii_art_probs(string):\n",
+    "    tokens = cased_tokenizer([string])\n",
+    "    guesses = get_mask(tokens)\n",
+    "\n",
+    "    indent = string.index('[MASK]')\n",
+    "\n",
+    "    string = string.replace('[MASK]', '___')\n",
+    "\n",
+    "    print(string)\n",
+    "\n",
+    "    for word, prob in guesses:\n",
+    "        prob_string = \"{}%\".format(round(prob * 100)) \n",
+    "        # print(prob_string)\n",
+    "        prob_string = \" \" * (indent - len(prob_string) - 1) + prob_string + \" \" + word\n",
+    "\n",
+    "        print(prob_string)\n",
+    "\n",
+    "# ascii_art_probs('The firetruck was painted bright [MASK].')\n",
+    "# ascii_art_probs('The fish loves to eat [MASK].')\n",
+    "# ascii_art_probs('The fish loves to eat [MASK]')\n",
+    "ascii_art_probs('The British Prime Minister is [MASK].')\n",
+    "ascii_art_probs('The capital of Illinois is [MASK].')\n",
+    "\n",
+    "ascii_art_probs('17 plus 80 equals [MASK].')\n",
+    "\n",
+    "ascii_art_probs('1, 1, 2, 3, 5, [MASK].')"
    ]
   },
   {
@@ -237,13 +295,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "# Part Two: Fine Tuning on Classification"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
